parked apps/grafana/base/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        runAsUser: 472
        runAsGroup: 472
        fsGroup: 472
      containers:
        - name: grafana
          image: grafana/grafana:11.3.0
          ports:
            - containerPort: 3000

          volumeMounts:
            # Persistent storage (SQLite DB, plugins, dashboards runtime cache)
            - name: storage
              mountPath: /var/lib/grafana

            # Provisioned datasources
            - name: datasources
              mountPath: /etc/grafana/provisioning/datasources


      volumes:
        # PVC
        - name: storage
          persistentVolumeClaim:
            claimName: grafana-storage

        # Datasources ConfigMap (your grafana-config-datasources.yaml)
        - name: datasources
          configMap:
            name: grafana-config-datasources
