parked apps/grafana/base/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - grafana.zmartin.me
      secretName: wildcard-zmartin-me-tls

  rules:
    - host: grafana.zmartin.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
